--- a/src/scss/vars.scss
+++ b/src/scss/vars.scss
@@ -3,6 +3,7 @@ $color-secondary:   #112E49;
 $color-medium:      #4D5A65;
 $color-low:         #868F98;
 $color-hint:        #BAC0C6;
+$color-green:       #14A84F;
 
 $border-white:      #E9EFF5;
 
