--- a/src/scss/styles.scss
+++ b/src/scss/styles.scss
@@ -7820,15 +7820,16 @@
     }
 
     &__wrapper {
-        padding: 0 40px;
         position: relative;
+        width: 210px;
+        margin: 0 auto;
     }
 
     &__inf {
         position: absolute;
         left: 50%;
         top: 50%;
-        width: calc(100% - 28px);
+        width: 130px;
         text-align: center;
         transform: translate(-50%, -50%);
     }
@@ -7842,9 +7843,40 @@
         font-size: 24px;
         font-weight: 700;
         color: $color-low;
-        position: absolute;
-        bottom: 90px;
-        right: 130px;
+    }
+
+    &__labels {
+        margin: 6px 0 22px;
+        padding: 0 20px;
+    }
+
+    &__labels-list {
+        display: flex;
+        flex-wrap: wrap;
+    }
+
+    &__label {
+        list-style-type: none;
+        margin-right: 24px;
+        display: flex;
+        align-items: center;
+        margin: 6px 0;
+        min-width: 50%;
+        flex: 1 1 auto;
+    }
+
+    &__label-point {
+        width: 7px;
+        height: 7px;
+        border-radius: 50%;
+        margin-right: 4px;
+        flex: 0 0 auto;
+    }
+
+    &__label-name {
+        font-size: 15px;
+        line-height: 1.2;
+        color: $color-medium;
     }
 
     &_deals {
@@ -7858,13 +7890,6 @@
 
         .chart-analysis__value {
             color: $color-secondary;
-            position: static;
-        }
-
-        .chart-analysis__wrapper {
-            padding: 0;
-            width: 170px;
-            margin: 0 auto;
         }
     }
 }
