--- a/src/scss/media.scss
+++ b/src/scss/media.scss
@@ -386,6 +386,10 @@
             margin-top: 8px;
         }
     }
+
+    .num-analysis {
+        display: none;
+    }
 }
 
 @media screen and (max-width: 991px) {
@@ -812,7 +816,7 @@
         position: fixed;
         left: 0;
         top: 0;
-        z-index: 3;
+        z-index: 9006;
         height: 100%;
 
         &__content {
@@ -1210,6 +1214,41 @@
             .inf-popup__content {
                 padding-bottom: 60px;
             }
+        }
+    }
+
+    .analytics {
+        padding-bottom: 30px;
+
+        &__header-select {
+            margin-left: 0;
+            width: 100%;
+        }
+    }
+
+    .deals-analysis {
+        padding-top: 12px;
+
+        &__header {
+            margin-left: 16px;
+            margin-right: 16px;
+        }
+
+        &__main {
+            padding: 0 16px;
+        }
+    }
+
+    .payment-analysis {
+        padding: 16px;
+
+        &__header {
+            flex-direction: column;
+            align-items: flex-start;
+        }
+
+        &__selects {
+            margin-top: 12px;
         }
     }
 }
@@ -2078,6 +2117,80 @@
 
         &__item-value {
             margin-top: 4px;
+        }
+    }
+
+    .profit-analysis {
+        padding: 20px 16px;
+
+        &__value {
+            font-size: 24px;
+        }
+    }
+
+    .invest-analysis {
+        padding-left: 16px;
+
+        &__value {
+            font-size: 24px;
+        }
+
+        &__quarter {
+            margin-left: 0;
+        }
+
+        &__indicators {
+            padding-right: 14px;
+        }
+
+        &__indicators-list {
+            margin-top: 10px;
+        }
+
+        &__indicators-item {
+            width: 16px;
+            padding: 22px 0;
+            flex: 1 1 auto;
+        }
+
+        &__progress {
+            width: 48px;
+        }
+    }
+
+    .chart-analysis {
+        padding: 16px 0 0;
+    }
+
+    .payment-graph {
+        &__label {
+            flex: 1 1 50%;
+            margin-right: 0;
+        }
+    }
+
+    .forecast-graph {
+        padding: 135px 16px 14px;
+
+        &__header {
+            flex-wrap: wrap;
+            top: 16px;
+            left: 16px;
+            width: calc(100% - 32px);
+        }
+
+        &__selects {
+            margin-top: 10px;
+        }
+    }
+
+    .discuss {
+        padding: 16px;
+    }
+
+    .calendar {
+        .qs-datepicker-container {
+            padding: 24px 16px;
         }
     }
 }
